Added filename limit for Windows
- Scraper fails partway through due to overly long filename, added function to truncate.

--- a/Scraper v.02.ipynb
+++ b/Scraper v.02.ipynb
@@ -285,12 +285,12 @@
    "outputs": [],
    "source": [
     "#Create a function to sanitize filenames\n",
-    "def sanitize_filename(name):\n",
+    "def sanitize_filename(name, max_length=249):\n",
     "    if isinstance(name, pd.Series):\n",
     "        name = name.iloc[0] if not name.empty else \"default_name\"\n",
     "    valid_chars = \"-_.() %s%s\" % (string.ascii_letters, string.digits)\n",
     "    sanitized_name = ''.join(c for c in name if c in valid_chars)\n",
-    "    return sanitized_name"
+    "    return sanitized_name[:max_length]"
    ]
   },
   {
