Escape a character in docstrings

--- a/De-Duplicator.ipynb
+++ b/De-Duplicator.ipynb
@@ -34,7 +34,7 @@
     "    PermissionError: If the function fails to delete a file due to permission issues.\n",
     "\n",
     "    Example:\n",
-    "    >>> json_folder = r'C:\\example_json_folder'\n",
+    "    >>> json_folder = r'C:\\\\example_json_folder'\n",
     "    >>> delete_duplicate_json_files(json_folder)\n",
     "    \"\"\"\n",
     "    seen_combinations = set()  # Set to store unique combinations of full_title and url\n",
