Improvements Utils Logic
- Improved De-Duplicator to have error handling.
- Added statement to print file woked on. Commented out some statements for better clarity, but optional details available
- Error Checker improved to handle situation where no errors found in acts or regs

--- a/De-Duplicator.ipynb
+++ b/De-Duplicator.ipynb
@@ -39,29 +39,48 @@
     "    \"\"\"\n",
     "    seen_combinations = set()  # Set to store unique combinations of full_title and url\n",
     "\n",
+    "    print(f\"Starting to process files in {json_folder}\")\n",
     "    for file in os.listdir(json_folder):\n",
     "        if file.endswith(\".json\"):\n",
-    "            file_path = os.path.join(json_folder, file)\n",
-    "            with open(file_path, 'r', encoding='utf-8') as f:\n",
-    "                try:\n",
-    "                    json_data = json.load(f)\n",
-    "                except json.JSONDecodeError:\n",
-    "                    continue  # Skip files that are not valid JSON\n",
+    "#            file_path = os.path.join(json_folder, file)\n",
+    "            print(f\"Processing file: {file_path}\")\n",
     "\n",
-    "                # Extract full_title and url\n",
-    "                if 'act_info' in json_data:\n",
-    "                    full_title = json_data['act_info'].get('full_title', '')\n",
-    "                    url = json_data['act_info'].get('url', '')\n",
+    "            try:\n",
+    "                with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "                    json_data = json.load(f)\n",
+    "#                    print(f\"Successfully read JSON data from {file}\")\n",
+    "\n",
+    "            except json.JSONDecodeError as e:\n",
+    "                print(f\"JSON decode error in file {file}: {e}\")\n",
+    "                continue  # Skip files that are not valid JSON\n",
+    "            except Exception as e:\n",
+    "                print(f\"Unexpected error while reading file {file}: {e}\")\n",
+    "                traceback.print_exc()\n",
+    "                continue\n",
+    "\n",
+    "            # Extract full_title and url\n",
+    "            for key in ['act_info', 'reg_info']:\n",
+    "                if key in json_data:\n",
+    "                    full_title = json_data[key].get('full_title', '')\n",
+    "                    url = json_data[key].get('url', '')\n",
     "                    unique_key = (full_title, url)\n",
     "\n",
     "                    # Check if this combination has been seen before\n",
     "                    if unique_key in seen_combinations:\n",
-    "                        # Duplicate found, delete the file\n",
-    "                        os.remove(file_path)\n",
-    "                        print(f\"Deleted duplicate file: {file}\")\n",
+    "                        try:\n",
+    "                            os.remove(file_path)\n",
+    "                            print(f\"Deleted duplicate file: {file}\")\n",
+    "                        except PermissionError as e:\n",
+    "                            print(f\"PermissionError while deleting file {file}: {e}\")\n",
+    "                            traceback.print_exc()\n",
+    "                        except Exception as e:\n",
+    "                            print(f\"Unexpected error while deleting file {file}: {e}\")\n",
+    "                            traceback.print_exc()\n",
     "                    else:\n",
-    "                        # New combination, add to the set\n",
-    "                        seen_combinations.add(unique_key)"
+    "                        seen_combinations.add(unique_key)\n",
+    "#                        print(f\"Added new combination to seen: {unique_key}\")\n",
+    "\n",
+    "    print(\"Finished processing all files.\")\n"
    ]
   }
  ],
