--- a/Error Checker.ipynb
+++ b/Error Checker.ipynb
@@ -32,36 +32,37 @@
    "source": [
     "#Function to check for failed acts (empty content; empty revoked regs)\n",
     "def check_jsons_act_content(json_folder):\n",
+    "    # Define the column names\n",
+    "    columns = ['citation', 'url']\n",
     "    data = []\n",
     "\n",
     "    for file in os.listdir(json_folder):\n",
     "        if file.endswith(\".json\"):\n",
-    "            with open(os.path.join(json_folder, file), 'r', encoding='utf-8') as f:\n",
-    "                json_data = json.load(f)\n",
+    "            try:\n",
+    "                with open(os.path.join(json_folder, file), 'r', encoding='utf-8') as f:\n",
+    "                    json_data = json.load(f)\n",
     "\n",
-    "                # Using get method with default values\n",
-    "                revoked_regs = json_data.get('revoked_regs', None)\n",
-    "                versions = json_data.get('versions', [])\n",
-    "                content = json_data.get('content', None)\n",
+    "                    # Using get method with default values\n",
+    "                    revoked_regs = json_data.get('revoked_regs', None)\n",
+    "                    versions = json_data.get('versions', [])\n",
+    "                    content = json_data.get('content', None)\n",
     "\n",
-    "                # Check if 'act_info' is present\n",
-    "                if 'act_info' in json_data:\n",
-    "                    # Conditions for including the data\n",
-    "                    include_data = (content is None) or (revoked_regs is None and len(versions) < 3)\n",
+    "                    # Check if 'act_info' is present\n",
+    "                    if 'act_info' in json_data:\n",
+    "                        # Conditions for including the data\n",
+    "                        include_data = (content is None) or (revoked_regs is None and len(versions) < 3)\n",
     "\n",
-    "                    if include_data:\n",
-    "                        data.append({\n",
-    "                            'citation': json_data['act_info']['full_title'],\n",
-    "                            'url': json_data['act_info']['url']\n",
-    "                        })\n",
+    "                        if include_data:\n",
+    "                            data.append({\n",
+    "                                'citation': json_data['act_info']['full_title'],\n",
+    "                                'url': json_data['act_info']['url']\n",
+    "                })\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {file}: {e}\")\n",
     "\n",
     "        #print(f\"Processing {file}\")\n",
     "\n",
-    "    return pd.DataFrame(data)\n",
-    "\n",
-    "# Example usage\n",
-    "df_acts = check_jsons_act_content(r'C:\\Users\\horat\\Codingz\\Elaws Scraping Scripts\\Python Pit\\dbtest')\n",
-    "df_acts"
+    "    return pd.DataFrame(data, columns=columns)"
    ]
   },
   {
@@ -83,14 +84,10 @@
     "                if 'reg_info' in json_data and not json_data.get('content'):\n",
     "                    data.append({\n",
     "                        'citation': json_data['reg_info']['full_title'],\n",
-    "                        'url': json_data['reg_info']['current_url']\n",
+    "                        'url': json_data['reg_info']['url']\n",
     "                    })\n",
     "\n",
-    "    return pd.DataFrame(data)\n",
-    "\n",
-    "# Example usage\n",
-    "df_regs = check_jsons_reg_content(r'C:\\Users\\horat\\Codingz\\Elaws Scraping Scripts\\Python Pit\\dbtest')\n",
-    "df_regs"
+    "    return pd.DataFrame(data)"
    ]
   },
   {
@@ -138,7 +135,7 @@
     "                    data.append({'type': 'Act', 'citation': citation, 'url': url})\n",
     "                elif 'reg_info' in json_data:\n",
     "                    citation = json_data['reg_info'].get('full_title', 'No Title')\n",
-    "                    url = json_data['reg_info'].get('current_url', 'No URL')\n",
+    "                    url = json_data['reg_info'].get('url', 'No URL')\n",
     "                    data.append({'type': 'Regulation', 'citation': citation, 'url': url})\n",
     "\n",
     "    #DF Data\n",
@@ -235,7 +232,7 @@
     "                            'date_scraped']]\n",
     "\n",
     "    # Define save path\n",
-    "    save_path = os.path.join(db_folder, 'failed', 'rescrape_list.csv')\n",
+    "    save_path = os.path.join('failed', 'rescrape_list.csv')\n",
     "\n",
     "    # Check if the directory exists, and create it if it does not\n",
     "    save_dir = os.path.dirname(save_path)\n",
