Improvements to Scraping Logic
Upgraded logic to handle more cases

--- a/Scraper v.02.ipynb
+++ b/Scraper v.02.ipynb
@@ -1952,7 +1952,7 @@
     "\n",
     "\n",
     "#If Normal\n",
-    "    elif toc.find('p', class_='table'):\n",
+    "    elif toc.find('p', class_='table') or toc.find('p', class_='table-e'):\n",
     "        print(\"Structure Type: Regular Law TOC (regular logic)\")\n",
     "\n",
     "        #Get LeftHead Law Content\n",
@@ -2195,7 +2195,7 @@
    "outputs": [],
    "source": [
     "#Function to Scrape Versions and return a dataframe\n",
-    "def scrape_versions_to_df(driver, soup, url):\n",
+    "def scrape_versions_to_df1(driver, soup, url):\n",
     "    \"\"\"\n",
     "    Scrape versions of legislation from a web page and return them as a DataFrame.\n",
     "\n",
@@ -2266,22 +2266,29 @@
     "\n",
     "                # Check if current legislation\n",
     "                current_label = td_cells[0].find('span', class_='label')\n",
-    "                if current_label and current_label.get_text().strip().lower() == 'current':\n",
-    "                    valid_from = td_cells[1].find('span', class_='time').get_text().strip()\n",
+    "                no_date_label = td_cells[1].find('span', class_='no-date')\n",
+    "\n",
+    "                if current_label and no_date_label:\n",
+    "                    # Handle the 'current' law row\n",
+    "                    valid_from = 'N/A'  # Or an appropriate value\n",
+    "                    valid_to = 'current'\n",
+    "                elif current_label and current_label.get_text().strip().lower() == 'current':\n",
+    "                    valid_from = td_cells[1].find('span', class_='time').get_text().strip() if td_cells[1].find('span', class_='time') else 'N/A'\n",
     "                    valid_to = 'current'\n",
     "                else:\n",
     "                    # Extract valid dates\n",
     "                    span_tags = td_cells[1].find_all('span', class_='time')\n",
     "                    if len(span_tags) == 1:\n",
     "                        valid_from = 'Repealed'\n",
-    "                        valid_to = span_tags[0].get_text().strip()\n",
+    "                        valid_to = span_tags[0].get_text().strip() if span_tags[0] else 'N/A'\n",
     "                    elif len(span_tags) > 1:\n",
-    "                        valid_from = span_tags[0].get_text().strip()\n",
-    "                        valid_to = span_tags[1].get_text().strip()\n",
+    "                        valid_from = span_tags[0].get_text().strip() if span_tags[0] else 'N/A'\n",
+    "                        valid_to = span_tags[1].get_text().strip() if len(span_tags) > 1 and span_tags[1] else 'N/A'\n",
     "                    else:\n",
     "                        valid_from = 'N/A'\n",
     "                        valid_to = 'N/A'\n",
     "\n",
+    "                #print(f\"valid_from: {valid_from}, valid_to: {valid_to}\")\n",
     "                valid_froms.append(valid_from)\n",
     "                valid_tos.append(valid_to)\n",
     "\n",
