--- a/Scraper v.02.ipynb
+++ b/Scraper v.02.ipynb
@@ -444,12 +444,12 @@
     "                \n",
     "                for row in revoked_regs_rows:\n",
     "                    td_cells = row.find_all('td')\n",
-    "                if len(td_cells) >= 2:\n",
-    "                        a_tag = td_cells[1].find('a')\n",
-    "                        if a_tag:\n",
-    "                            citations.append(td_cells[0].get_text().strip())\n",
-    "                            titles.append(a_tag.get_text().strip())\n",
-    "                            hrefs.append(a_tag['href'])\n",
+    "                    if len(td_cells) >= 2:\n",
+    "                            a_tag = td_cells[1].find('a')\n",
+    "                            if a_tag:\n",
+    "                                citations.append(td_cells[0].get_text().strip())\n",
+    "                                titles.append(a_tag.get_text().strip())\n",
+    "                                hrefs.append(a_tag['href'])\n",
     "\n",
     "                # Create DataFrame\n",
     "                revoked_regs_data = pd.DataFrame({\n",
@@ -467,10 +467,10 @@
     "        print(\"Revoked Regulations (RR) not found for \" + url + \".\")\n",
     "        pass\n",
     "\n",
-    "        # Convert DataFrame to JSON object\n",
-    "        revoked_regs_dict = revoked_regs_data.to_dict(orient='records')\n",
+    "    # Convert DataFrame to JSON object\n",
+    "    revoked_regs_dict = revoked_regs_data.to_dict(orient='records')\n",
     "\n",
-    "        return revoked_regs_dict"
+    "    return revoked_regs_dict"
    ]
   },
   {
@@ -1922,6 +1922,7 @@
     "    #Scrape Act Info/MetaData for filename parameters\n",
     "    act_info_json = parse_act_info(soup, url)\n",
     "\n",
+    "\n",
     "#If TOCless\n",
     "    if not toc:\n",
     "        print(\"Structure Type: No Law TOC (TOCless logic) for \" + str(url))\n",
@@ -1934,7 +1935,6 @@
     "\n",
     "        #Save File\n",
     "        save_law_data(combined_data, act_info_json, valid_from, valid_to)\n",
-    "        \n",
     "\n",
     "\n",
     "#If LeftHead\n",
@@ -1952,7 +1952,7 @@
     "\n",
     "\n",
     "#If Normal\n",
-    "    elif toc.find('p', class_='table') or toc.find('p', class_='table-e'):\n",
+    "    elif toc.find('p', class_='TOCid') or toc.find('p', class_='TOCid-e'):\n",
     "        print(\"Structure Type: Regular Law TOC (regular logic)\")\n",
     "\n",
     "        #Get LeftHead Law Content\n",
@@ -1963,6 +1963,21 @@
     "\n",
     "        #Save File\n",
     "        save_law_data(combined_data, act_info_json, valid_from, valid_to)\n",
+    "\n",
+    "\n",
+    "# If No-TOC, but with MsoNormal Table\n",
+    "    elif toc and not toc.find('p', class_='TOCid-e') or toc.find('p', class_='TOCid'):\n",
+    "        print(\"Structure Type: TOCless Law w/ Table \" + str(url))\n",
+    "        \n",
+    "        # Get TOC-less Content\n",
+    "        noTOC_content = scrape_noTOC_law(url)\n",
+    "\n",
+    "        #Combine into dict\n",
+    "        combined_data = combine_law_data(driver, soup, url, noTOC_content)\n",
+    "\n",
+    "        #Save File\n",
+    "        save_law_data(combined_data, act_info_json, valid_from, valid_to)\n",
+    "\n",
     "\n",
     "#If Unexpected\n",
     "    else:\n",
