--- a/De-Duplicator.ipynb
+++ b/De-Duplicator.ipynb
@@ -82,6 +82,66 @@
     "\n",
     "    print(\"Finished processing all files.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_oldest_duplicate_json_files(json_folder):\n",
+    "    import os\n",
+    "    import json\n",
+    "    from datetime import datetime\n",
+    "\n",
+    "    seen_combinations = {}  # Dictionary to store unique combinations with the most recent date and file path\n",
+    "\n",
+    "    print(f\"Starting to process files in {json_folder}\")\n",
+    "    for file in os.listdir(json_folder):\n",
+    "        if file.endswith(\".json\"):\n",
+    "            file_path = os.path.join(json_folder, file)\n",
+    "\n",
+    "            try:\n",
+    "                with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "                    json_data = json.load(f)\n",
+    "\n",
+    "            except json.JSONDecodeError as e:\n",
+    "                print(f\"JSON decode error in file {file}: {e}\")\n",
+    "                continue\n",
+    "            except Exception as e:\n",
+    "                print(f\"Unexpected error while reading file {file}: {e}\")\n",
+    "                continue\n",
+    "\n",
+    "            # Extract full_title, url, and date_scraped\n",
+    "            for key in ['act_info', 'reg_info']:\n",
+    "                if key in json_data:\n",
+    "                    full_title = json_data[key].get('full_title', '')\n",
+    "                    url = json_data[key].get('url', '')\n",
+    "                    date_scraped_str = json_data[key].get('date_scraped', '')\n",
+    "                    try:\n",
+    "                        date_scraped = datetime.strptime(date_scraped_str, '%Y-%m-%d %H:%M:%S')\n",
+    "                    except ValueError:\n",
+    "                        print(f\"Invalid date format in file {file}: {date_scraped_str}\")\n",
+    "                        continue\n",
+    "\n",
+    "                    unique_key = (full_title, url)\n",
+    "\n",
+    "                    # Check if this combination has been seen before and compare dates\n",
+    "                    if unique_key in seen_combinations:\n",
+    "                        existing_file, existing_date = seen_combinations[unique_key]\n",
+    "                        if date_scraped > existing_date:\n",
+    "                            # The current file is more recent, delete the existing one\n",
+    "                            try:\n",
+    "                                os.remove(existing_file)\n",
+    "                                print(f\"Deleted older duplicate file: {existing_file}\")\n",
+    "                                seen_combinations[unique_key] = (file_path, date_scraped)\n",
+    "                            except Exception as e:\n",
+    "                                print(f\"Error deleting file {existing_file}: {e}\")\n",
+    "                    else:\n",
+    "                        seen_combinations[unique_key] = (file_path, date_scraped)\n",
+    "\n",
+    "    print(\"Finished processing all files.\")"
+   ]
   }
  ],
  "metadata": {
